--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="publication-links">
                   <!-- PDF Link. -->
                   <span class="link-block"></span>
-                  <a href="" class="external-link button is-normal is-rounded is-dark" disabled>
+                  <a href="https://arxiv.org/pdf/2501.16312" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                     </span>
@@ -59,7 +59,7 @@
                   </a>
                   </span>
                   <span class="link-block"></span>
-                  <a href="" class="external-link button is-normal is-rounded is-dark" disabled>
+                  <a href="https://arxiv.org/abs/2501.16312" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
                     </span>
