Updated YouTube link and abstract.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </span>
                 <span>arXiv</span>
               </a>
-              <a href="https://youtu.be/P2yeHwmGaeM" class="button is-normal is-rounded is-dark">
+              <a href="https://youtu.be/NRRlmFZj5KQ" class="button is-normal is-rounded is-dark">
                 <span class="icon">
                   <i class="fab fa-youtube"></i>
                 </span>
@@ -102,23 +102,18 @@
           <h2 class="title is-3">Abstract</h2>
           <div class="content has-text-justified">
             <p>
-              Volumetric rendering has become central to modern novel view synthesis
-              methods, which use differentiable rendering to optimize 3D scene representations
-              directly from observed views. While many recent works build on
-              NeRF or 3D Gaussians, we explore
-              an alternative volumetric scene representation. More specifically, we introduce
-              two new scene representations based on linear primitives—octahedra
-              and tetrahedra—both of which define homogeneous volumes bounded by
-              triangular faces. This formulation aligns naturally with standard mesh-based
-              tools, minimizing overhead for downstream applications. To optimize these
-              primitives, we present a differentiable rasterizer that runs efficiently on GPUs,
-              allowing end-to-end gradient-based optimization while maintaining realtime
-              rendering capabilities. Through experiments on real-world datasets, we
-              demonstrate comparable performance to state-of-the-art volumetric methods
-              while requiring fewer primitives to achieve similar reconstruction fidelity.
-              Our findings provide insights into the geometry of volumetric rendering
-              and suggest that adopting explicit polyhedra can expand the design space of
-              scene representations.
+              Volumetric rendering has become central to modern novel view synthesis methods, which use differentiable
+              rendering to optimize 3D scene representations directly from observed views. While many recent works build
+              on NeRF or 3D Gaussians, we explore an alternative volumetric scene representation. More specifically, we
+              introduce two new scene representations based on linear primitives—octahedra and tetrahedra—both of which
+              define homogeneous volumes bounded by triangular faces. This formulation aligns naturally with standard
+              mesh-based tools, minimizing overhead for downstream applications. To optimize these primitives, we
+              present a differentiable rasterizer that runs efficiently on GPUs, allowing end-to-end gradient-based
+              optimization while maintaining realtime rendering capabilities. Through experiments on real-world
+              datasets, we demonstrate comparable performance to state-of-the-art volumetric methods while requiring
+              fewer primitives to achieve similar reconstruction fidelity. Our findings provide insights into the
+              geometry of volumetric rendering and suggest that adopting explicit polyhedra can expand the design space
+              of scene representations.
             </p>
           </div>
         </div>
