Also update embedded video

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="column is-four-fifths">
           <h2 class="title is-3">Video</h2>
           <div class="publication-video">
-            <iframe src="https://www.youtube.com/embed/P2yeHwmGaeM?si=x5VkqieJLKkWU0mv&amp;showinfo=0" frameborder="0"
+            <iframe src="https://www.youtube.com/embed/NRRlmFZj5KQ?si=lzwjU78Qd5DodR_A&amp;showinfo=0" frameborder="0"
               allow="autoplay; encrypted-media" allowfullscreen>
             </iframe>
           </div>
