--- a/index.html
+++ b/index.html
@@ -122,6 +122,18 @@
     </div>
   </section>
 
+  <section class="section" id="BibTeX">
+    <div class="container is-max-desktop content">
+      <h2 class="title">BibTeX</h2>
+      <pre><code>@article{von2025linprim,
+  title={LinPrim: Linear Primitives for Differentiable Volumetric Rendering},
+  author={von L{\"u}tzow, Nicolas and Nie{\ss}ner, Matthias},
+  journal={arXiv preprint arXiv:2501.16312},
+  year={2025}
+  }</code></pre>
+    </div>
+  </section>
+
   <footer class="footer">
     <div class="container">
       <div class="columns is-centered">
