--- a/index.html
+++ b/index.html
@@ -56,25 +56,53 @@
             <h1 class="title is-1 publication-title">
               LinPrim: Linear Primitives for Differentiable Volumetric Rendering
             </h1>
-            <div class="buttons is-centered">
-              <a href="https://arxiv.org/pdf/2501.16312" class="button is-normal is-rounded is-dark">
-                <span class="icon">
-                  <i class="fas fa-file-pdf"></i>
-                </span>
-                <span>Paper</span>
-              </a>
-              <a href="https://arxiv.org/abs/2501.16312" class="button is-normal is-rounded is-dark">
-                <span class="icon">
-                  <i class="ai ai-arxiv"></i>
-                </span>
-                <span>arXiv</span>
-              </a>
-              <a href="https://youtu.be/NRRlmFZj5KQ" class="button is-normal is-rounded is-dark">
-                <span class="icon">
-                  <i class="fab fa-youtube"></i>
-                </span>
-                <span>Video</span>
-              </a>
+            <div class="is-size-5 publication-authors">
+            <span class="author-block">
+              <a href="https://nicolasvonluetzow.github.io/">Nicolas von Lützow</a>,</span>
+            <span class="author-block">
+              <a href="https://www.niessnerlab.org/">Matthias Nießner</a></span>
+          </div>
+          <div class="is-size-5 publication-authors">
+            <span class="author-block">Technical University of Munich</span>
+          </div>
+          <div class="column has-text-centered">
+            <div class="publication-links">
+              <!-- PDF Link. -->
+              <span class="link-block">
+                <a href="https://arxiv.org/pdf/2501.16312" class="button is-normal is-rounded is-dark">
+                  <span class="icon">
+                    <i class="fas fa-file-pdf"></i>
+                  </span>
+                  <span>Paper</span>
+                </a>
+              </span>
+              <span class="link-block">
+                <a href="https://arxiv.org/abs/2501.16312" class="button is-normal is-rounded is-dark">
+                  <span class="icon">
+                    <i class="ai ai-arxiv"></i>
+                  </span>
+                  <span>arXiv</span>
+                </a>
+              </span>
+              <!-- Video Link. -->
+              <span class="link-block">
+                <a href="https://youtu.be/NRRlmFZj5KQ" class="button is-normal is-rounded is-dark">
+                  <span class="icon">
+                    <i class="fab fa-youtube"></i>
+                  </span>
+                  <span>Video</span>
+                </a>
+              </span>
+              <!-- Code Link. -->
+              <span class="link-block">
+                <a href=""
+                   class="external-link button is-normal is-rounded is-dark" disabled aria-disabled="true" tabindex="-1" style="pointer-events: none; opacity: 0.6;">
+                  <span class="icon">
+                    <i class="fab fa-github"></i>
+                  </span>
+                  <span>Code (coming soon!)</span>
+                </a>
+              </span>
             </div>
           </div>
         </div>
